--- a/css/main.css
+++ b/css/main.css
@@ -630,6 +630,8 @@ input.input100 {
   border-radius: 5px;
 }
 
+@import url('https://fonts.flawcra.cc/NotoSans/stylesheet.css');
+
 .mc-button__green-s1 {
 	background: #3b8526;
 	box-shadow: inset 0 4px #6bc349,inset 0 -4px #2a631c,0 4px rgb(0 0 0 / 25%);
